$Id$

2017-11-20  Alex Samorukov  <samm@os2.kiev.ua>

	os_netbsd.cpp (fix regressions in smartmontools 6.6)
	 - fix BE platforms support, tested on sparc64
	 - fix name based device type detection

2017-11-18  Alex Samorukov  <samm@os2.kiev.ua>

	drivedb.h:
	- Add Swissbit C440 industrial cf card series (#942)
	- Fix Innolite Satadom D150QV entry (#939)

2017-11-16  Christian Franke  <franke@computer.org>

	smartd.initd.in: Remove FreeBSD section.

	os_linux.cpp: Add missing braces to 3ware SELinux code.
	This possibly harmless bug was introduced ~10 years ago in r2510.
	It is now detected by g++ 6.3 -Wmisleading-indentation warning.

	update-smart-drivedb.in: Include configured PATH in help and
	error messages.  Allow digits in SVN Id user name.

	configure.ac: Prepend '/usr/local/bin' to default for
	'--with-scriptpath' (#941).

2017-11-15  Christian Franke  <franke@computer.org>

	smartd.cpp: Use 'sigaction()' instead of deprecated 'sigset()'
	or 'signal()'.
	configure.ac: Add '--with-signal-func' to select old function
	if needed.

	configure.ac: Remove '-with-initscriptdir=[auto|yes]' heuristics.
	The default init script is no longer useful on most platforms.
	INSTALL: Update related documentation.

	configure.ac, Makefile.am: Use smartd.cygwin.initd.in on Cygwin.
	smartd.cygwin.initd.in: New file.
	smartd.initd.in: Remove Cygwin section.

	configure.ac: Make some header checks platform specific.
	Print '--with-nvme-devicescan' warning also on FreeBSD.
	Remove '--with-solaris-sparc-ata' warning.

	examplescripts/Example6: Add enhancements from Fedora package.

2017-11-13  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Western Digital Red: WD80EZZX
	- USB: WD My Book (0x1058:0x25ee) (Red Hat Bugzilla 1446533)

2017-11-13  Matt Coates  <me@mattjackets.com>

	drivedb.h: USB: Seagate Backup Plus 4TB (0x0bc2:0xab43) (#926)

2017-11-10  Alex Samorukov  <samm@os2.kiev.ua>

	drivedb.h: add SanDisk iSSD SDIS6BM (#923)
